# poker-feature-extraction

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  hands.json  kernel.cl  temp.txt
src/: constants.rs  database.rs  encode.rs  game.rs  kernel.rs  load.rs  logger.rs  main.rs
src/hand_strength_histogram/: generate.rs  kernel.cl  save.rs
src/opponent_cluster_hand_strength/: generate.rs  kernel.cl  load_labels.rs  save.rs
src/proto/: clustered_data_labels.proto  opponent_cluster_hand_strength_histograms.proto
