[package]
name = "poker-hand-strength-histogram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
itertools = "0.12.1"
log = "0.4.21"
num-bigint = "0.4.4"
num-traits = "0.2.18"
ocl = "0.19.7"
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.2.0"
rs_poker = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
