[package]
name = "poker-feature-extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hand-isomorphism-rust = { path = "./libs/hand-isomorphism-rust" }

bincode = "1.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
itertools = "0.12.1"
log = "0.4.21"
ocl = "0.19.7"
rand = "0.8.5"
rayon = "1.10.0"
prost = "0.12.4"
prost-types = "0.12.4"

[build-dependencies]
prost-build = "0.12.4"
